--- a/app/src/views/signup.hbs
+++ b/app/src/views/signup.hbs
@@ -1,15 +1,12 @@
 <section class="page signin">
   <div class="form-panel">
     <p class="app-name">Pew</p>
-
-    {{#if error}}
-      <p class="form-error">{{ message }}</p>
-    {{/if}}
+    <p class="_sub">Sign Up!</p>
 
     <form action="/signup" method="POST" class="signup">
       <div class="text-field">
         <label for="name">Name</label>
-        <input type="text" name="name" id="name">
+        <input type="text" name="name" id="name" value="{{ name }}">
 
         {{#if error.name}}
           <p class="field-error">{{ message.name }}</p>
@@ -18,7 +15,7 @@
       </div>
       <div class="text-field">
         <label for="email">Email</label>
-        <input type="email" name="email" id="email">
+        <input type="email" name="email" id="email" value="{{ email }}">
 
         {{#if error.email}}
           <p class="field-error">{{ message.email }}</p>
@@ -27,7 +24,7 @@
       </div>
       <div class="text-field">
         <label for="username">Username</label>
-        <input type="text" name="username" id="username">
+        <input type="text" name="username" id="username" value="{{ username }}">
 
         {{#if error.username}}
           <p class="field-error">{{ message.username }}</p>
@@ -36,17 +33,19 @@
       </div>
       <div class="text-field">
         <label for="password">Password</label>
-        <input type="password" name="password" id="password">
+        <input type="password" name="password" id="password" value="{{ password }}">
 
         {{#if error.password}}
           <p class="field-error">{{ message.password }}</p>
         {{/if}}
 
       </div>
-      <button type="submit">
-        Sign Up
-      </button>
+      <div class="_actions">
+        <a href="/">I already have an account</a>
+        <button class="default" type="submit">
+          Sign Up
+        </button>
+      </div>
     </form>
-    <a href="/">I already have an account</a>
   </div>
 </section>
