some extras validations and fixes for mvp

--- a/app/src/styles/style.scss
+++ b/app/src/styles/style.scss
@@ -35,6 +35,11 @@ a {
 
 form {
 
+  > .form-error {
+    margin-bottom: 1rem;
+    color: #f0483c;
+    text-align: center;
+  }
   > ._actions {
     display: flex;
     justify-content: flex-end;
