--- a/app/src/views/partials/timeline.hbs
+++ b/app/src/views/partials/timeline.hbs
@@ -16,6 +16,8 @@
           {{ this.text }}
         </div>
       </li>
+    {{else}}
+      <p>Is really silent in here! Please, say something.</p>
     {{/each}}
 
   </ol>
